and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !
`
     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

May   27st 2014, V.Ivanchenko transport-V09-06-08
------------------------------
- G4UserSpecialCuts - fixed trivial Coverity report

May   21st 2014, J.Apostolakis
------------------------------
- Revised  AlongStepDoIt methods of G4Transportation and 
   G4CoupledTransportation:
   * Adapted to revised signature for G4FieldTrack constructors, 
     which now take PDG spin.
   * Changed to use different constructor for G4FieldTrack (no Velocity)
   * Adapted to revised signature of G4ChargeState constructor (PDG spin is
     now 3rd argument and mandatory. )

NOTE: Requires tag field-V10-00-03 of geometry/magneticfield 


March 14th 2014, J.Apostolakis
------------------------------
- Fix time in case of zero step, in G4CoupledTransportation.
  This caused a 'going back in time' error, when a zero step occurred
  in particular at the boundary of a parallel world volume when scoring.

  > Corrects Issue 1017 in the Geant4 Problem reporting System
    http://bugzilla-geant4.kek.jp/show_bug.cgi?id=1017

  NOTE: Requires tag geomnav-V10-00-01

October 18th 2013, J.Apostolakis transport-V09-06-07
--------------------------------
- Initialize missing data members in G4CoupledTransportation constructor 
  Addresses issue identified by Coverity.

May 13th, 2013, G.Cosmo          transport-V09-06-06
-----------------------
- Removed left-over assert() calls in G4CoupledTransportation.

May 9th, 2013, J.Apostolakis     transport-V09-06-05
----------------------------
- Added protection to revised G4CoupledTransportation for case that chord
  finder (or field manager) is not defined.

May 8th, 2013, P.Gumplinger, J.Apostolakis transport-V09-06-04